Review changes are done

--- a/Module 3/Part-1/ObjectsList.cls
+++ b/Module 3/Part-1/ObjectsList.cls
@@ -1,4 +1,5 @@
 public class ObjectsList {
+    // A function which return the list of sobjects exists in org.
     public static list<Schema.SObjectType> listOfObjects(){
         return Schema.getGlobalDescribe().Values();
     }
