--- a/Module 6/TestRestrictHindiTeacher.cls
+++ b/Module 6/TestRestrictHindiTeacher.cls
@@ -16,7 +16,7 @@ public class TestRestrictHindiTeacher {
         // Creating data for teach with default subject maths
         List<Teach__c> newTeaches = new List<Teach__c>();
         for(Integer i = 0; i < 20; i++){
-            Teach__c newTeach = new Teach__c(Teacher__c = newTeachers[i].id, Class__c = newClasses[i].id, Subject__c = 'Maths');
+            Teach__c newTeach = new Teach__c(Teacher__c = newTeachers[i].Id, Class__c = newClasses[i].Id, Subject__c = 'Maths');
             newTeaches.add(newTeach);
         }
 
@@ -47,21 +47,26 @@ public class TestRestrictHindiTeacher {
          // Creating data for teach with default subject hindi and english
         List<Teach__c> newTeaches = new List<Teach__c>();
         for(Integer i = 0; i < 20; i++){
-            Teach__c newTeach = new Teach__c(Teacher__c = newTeachers[i].id, Class__c = newClasses[i].id, Subject__c = 'Hindi;English');
+            Teach__c newTeach = new Teach__c(Teacher__c = newTeachers[i].Id, Class__c = newClasses[i].Id, Subject__c = 'Hindi;English');
             newTeaches.add(newTeach);
         }
         // Perform test
         Test.startTest();
-        Database.SaveResult[] result = Database.insert(newTeaches, false);
+        Database.SaveResult[] results = Database.insert(newTeaches, false);
         Test.stopTest();
         
         // Fetch the teach records
-        List<Teach__c> teach= [SELECT Id FROM Teach__c];
+        List<Teach__c> teach = [SELECT Id FROM Teach__c];
         system.assertEquals(0, teach.size());
+        
+        for(Database.SaveResult result : results){
+            System.assertEquals('Sorry Hindi teachers can not create the account',
+                             result.getErrors()[0].getMessage());
+        }
     }
     
     /**
-     * Here all teacher teaches English 
+     * Here all teacher by default teaches English 
      * Update english with hindi but no record can update with hindi
      */
     @isTest
@@ -75,7 +80,7 @@ public class TestRestrictHindiTeacher {
         // create teach data with by default english subject
         List<Teach__c> newTeaches = new List<Teach__c>();
         for(Integer i = 0; i < 20; i++){
-            Teach__c newTeach = new Teach__c(Teacher__c = newTeachers[i].id, Class__c = newClasses[i].id, Subject__c = 'English');
+            Teach__c newTeach = new Teach__c(Teacher__c = newTeachers[i].Id, Class__c = newClasses[i].Id, Subject__c = 'English');
             newTeaches.add(newTeach);
         }
         insert newTeaches;
@@ -86,11 +91,16 @@ public class TestRestrictHindiTeacher {
         // Update hindi with english
         newTeaches[0].Subject__c = 'Hindi';
         newTeaches[15].Subject__c = 'Hindi';
-        Database.SaveResult[] result = Database.update(newTeaches, false);
+        Database.SaveResult[] results = Database.update(newTeaches, false);
         Test.stopTest();
         
         // fetch data and compare using assertEquals
         List<Teach__c> teach= [SELECT Id FROM Teach__c];
+        
         system.assertEquals(0, teach.size());
+        for(Database.SaveResult result : results){
+            System.assertEquals('Sorry Hindi teachers can not create the account',
+                             result.getErrors()[0].getMessage());
+        }
     }
 }
