Review changes are done

--- a/Module 8/classes/ProductsSelector.cls
+++ b/Module 8/classes/ProductsSelector.cls
@@ -6,18 +6,18 @@ public class ProductsSelector extends fflib_SObjectSelector {
         return Product2.sObjectType;
     }
     // without search value
-    public List<Product2> getProductsList() {   
-        return (List<Product2>) Database.query(newQueryFactory().setCondition('Quantity_Available__c > 0 ').toSOQL());
+    public List<Product2> getProductsList() { 
+        fflib_QueryFactory qf = newQueryFactory();
+        qf.setCondition('Quantity_Available__c > 0 ');
+		return (List<Product2>) Database.query(qf.toSOQL());
     }
     
     // with search value and sorting as well
-    public List<Product2> searchProducts(String searchText, String sortBy, String sortDirection) {
+    public List<Product2> searchProducts(String searchText, String sortBy, fflib_QueryFactory.SortOrder sortDirection) {
         searchText = '%'+searchText+'%' ;
-        if(sortDirection == 'ASC'){
-            return (List<Product2>)  Database.query(newQueryFactory().setCondition('Name Like :searchText AND Quantity_Available__c > 0 ').setOrdering(sortBy, fflib_QueryFactory.SortOrder.ASCENDING).toSOQL());
-        }
-        else{
-         	return (List<Product2>)  Database.query(newQueryFactory().setCondition('Name Like :searchText AND Quantity_Available__c > 0 ').setOrdering(sortBy, fflib_QueryFactory.SortOrder.DESCENDING).toSOQL()); 
-        }
+        fflib_QueryFactory qf = newQueryFactory();
+        qf.setCondition('Quantity_Available__c > 0 ');
+        qf.setOrdering(sortBy, sortDirection);
+        return (List<Product2>) Database.query(qf.toSOQL());
     }
 }
